--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,10 @@
     <groupId>com.br</groupId>
     <artifactId>P2SistDis</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <properties>
-        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <parent>
@@ -97,5 +99,4 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
     </dependencies>
-
 </project>
